recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:3: error: not found: value double
  double x = 3.72;
  ^FourSquare:4: error: not found: value x
  forward(x);
          ^